--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
         Head
     </head>
     <body>
-        <img src="" alt="">
+        <img src="img/cat.jpg" alt="gato">
     </body>
 </html>
