--- a/index.html
+++ b/index.html
@@ -1,9 +1,35 @@
 
 <html>
     <head>
+        <meta charset="UTF-8">
+        <title>gato</title>
+        <link rel="shortcut icon" href="./img/favicon.ico" type="imagen/x-icon">
         Gato
     </head>
     <body>
-        <img src="./img/cat.jpg" alt="gato">
+        <a name="top"></a>
+        <img src="./img/cat.jpg" alt="gato1">              
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/64/Collage_of_Six_Cats-02.jpg/1024px-Collage_of_Six_Cats-02.jpg" alt="gato2">
+        <ul> Unordered list
+            <li>UD1</li>
+            <li>UD2</li>
+            <li>UD3</li>
+            <li>UD4</li>
+        </ul>
+        <ol> Ordered list
+            <li>OD1</li>
+            <li>OD2</li>
+            <li>OD3</li>
+            <li>OD4</li>
+            <li>OD5</li>
+        </ol>
+        <br>
+        Links
+        <ul> Unordered list of Cats
+            <li><a href="./link.html" target="_blank">Link Page</a></li>
+            <li><a href="https://es.wikipedia.org/wiki/Felis_silvestris_catus" target="_blank" >GatoWiki</a></li>
+            <li><a href="#top">img gato1</a></li>
+            <li>UD4</li>
+        </ul>
     </body>
 </html>
